--- a/dbAPI/package.json
+++ b/dbAPI/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mssql": "^9.1.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.2.0"
   }
 }
