--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.2.0",
     "react-app": "^1.1.2",
     "react-dom": "^18.2.0",
+    "react-image-zoom": "^1.3.1",
+    "react-inner-image-zoom": "^3.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
